feat (Acl): Defining gate for all permission and Add api for role with doc
