# storage/api-docs/api-docs.json
@@ -2196,6 +2196,106 @@
                 ]
             }
         },
+        "/api/v1/roles": {
+            "get": {
+                "tags": [
+                    "Role"
+                ],
+                "summary": "Get roles",
+                "operationId": "8f043d6251e5eef3855e68929602b08e",
+                "responses": {
+                    "200": {
+                        "description": "get roles successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "name": {
+                                                    "type": "string",
+                                                    "example": "admin"
+                                                },
+                                                "description": {
+                                                    "type": "string",
+                                                    "example": "role admin"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Server error"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/roles/{role}": {
+            "get": {
+                "tags": [
+                    "Role"
+                ],
+                "summary": "Get role",
+                "operationId": "ccff46f3fc4cb1ab519cf9b716629c35",
+                "responses": {
+                    "200": {
+                        "description": "get role successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "name": {
+                                                    "type": "string",
+                                                    "example": "admin"
+                                                },
+                                                "description": {
+                                                    "type": "string",
+                                                    "example": "role admin"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Server error"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/api/v1/users": {
             "get": {
                 "tags": [
@@ -2468,6 +2568,10 @@
         {
             "name": "Task",
             "description": "Task"
+        },
+        {
+            "name": "Role",
+            "description": "Role"
         },
         {
             "name": "User",
